fixed overflow scroll function on larger screens

--- a/jQuery/RedBull/main.css
+++ b/jQuery/RedBull/main.css
@@ -57,6 +57,13 @@ img {
 .description {
   display: block;
   float: left;
+  width: 100%;
+  height: 150px;
+  text-overflow: ellipsis;
+
+  /* Required for text-overflow to do anything */
+  white-space: wrap;
+  overflow-y: scroll;
 }
 
 @media only screen and (max-width: 1324px){
@@ -75,6 +82,11 @@ img {
     width: 45%;
     float: right;
     height: 40%;
+  }
+
+  .description {
+    width: 100%;
+    height: 300px;
   }
 }
 
@@ -99,6 +111,11 @@ img {
   img {
     height: 100%;
     width: 100%;
+  }
+
+  .description {
+    width: 100%;
+    height: 200px;
   }
 }
 
@@ -163,10 +180,5 @@ img {
   .description {
     width: 100%;
     height: 100px;
-    text-overflow: ellipsis;
-
-    /* Required for text-overflow to do anything */
-    white-space: wrap;
-    overflow-y: scroll;
   }
 }
